--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "tailwindcss": "^1.9.6"
+    "tailwindcss": "^1.9.6",
+    "userbase-js": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
