--- a/package.json
+++ b/package.json
@@ -3,20 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer": "^10.0.1",
+    "dotenv": "^8.2.0",
+    "js-sha256": "^0.9.0",
     "postcss": "^8.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "recordrtc": "^5.6.1",
+    "socket.io-client": "^3.0.1",
+    "socket.io-stream": "^0.9.1",
     "tailwindcss": "^1.9.6",
     "userbase-js": "^2.3.0"
   },
+  "proxy": "",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
