--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-share": "^4.3.1",
     "recordrtc": "^5.6.1",
     "socket.io-client": "^3.0.1",
     "socket.io-stream": "^0.9.1",
